--- a/NewScheduler/bin/AndroidManifest.xml
+++ b/NewScheduler/bin/AndroidManifest.xml
@@ -22,7 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="AddSchedule"></activity>
+        <activity
+            android:name=".MainActivity2"
+            android:label="@string/title_activity_main_activity2" >
+        </activity>
+        <activity
+            android:name=".AddSchedule"
+            android:label="@string/title_activity_add_schedule" >
+        </activity>
     </application>
 
 </manifest>
