일단 확인 취소 팝업은 완료 단위 테스트는 테스트할 기기가 없어서인지 할수없음...(기존 코드는 블루스택으로 돌려봤는데 테스트 코드는 블루스택에서 안됨...)

--- a/NewScheduler/bin/AndroidManifest.xml
+++ b/NewScheduler/bin/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:name=".DetailSchedule"
             android:label="@string/title_activity_detail_schedule" >
         </activity>
+        <activity
+  		  android:name=".DialogActivity"
+ 		  android:theme="@android:style/Theme.Dialog">
+		</activity>
+        
     </application>
 
 </manifest>
