--- a/NewScheduler/bin/AndroidManifest.xml
+++ b/NewScheduler/bin/AndroidManifest.xml
@@ -10,12 +10,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_cancel"
-        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+        android:label="일정표"
         android:theme="@android:style/Theme.DeviceDefault.NoActionBar" android:name="GlobalVariable">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="일정표" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
